--- a/src/AppHosting/AppHosting.csproj
+++ b/src/AppHosting/AppHosting.csproj
@@ -5,7 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="build" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReferenceTargets Remove="build" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="build">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
